--- a/LeaveManagementSystem.Web/appsettings.json
+++ b/LeaveManagementSystem.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagementSystem.Web-efaaa466-c4ca-4db5-a2c6-d3eb41c09b1b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LeaveManagementSystemDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
